rework notes